# timesfm-cn-forecast-clean

./: .gitignore  README.md  experiment_plan.md  implementation_plan.md  pyproject.toml  requirements.txt
scripts/: analyze_group_results.py  run_all_groups_eval.sh  run_auto_top_picks.sh  run_byd_tests.sh  run_daily_predict.sh  run_group_eval.py  run_one_group_eval.sh  run_single_stock_eval.sh  run_single_stock_predict.sh
skills/timesfm-cn-forecast/: SKILL.md
skills/timesfm-cn-forecast/references/: all_a_stocks.csv  data_format.md  examples.md
skills/timesfm-cn-forecast/scripts/: run_cn_forecast.py
src/timesfm_cn_forecast/: __init__.py  analyze_group_results.py  backtest.py  cli.py  features.py  finetuning.py  modeling.py  pipeline.py  providers.py
src/timesfm_cn_forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/timesfm_cn_forecast/advanced/: __init__.py  finetuning.py  modeling.py  pipeline.py
src/timesfm_cn_forecast/universe/: __init__.py  __main__.py  cli.py  fetcher.py  storage.py
